// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`'tstyche' command handles unknown command line options: stderr 1`] = `
"Error: Unknown option '--check'.

Error: Unknown option '--quick'.

Error: Unknown option '-t'.

"
`;

exports[`'tstyche' command when no test files are present: stderr 1`] = `
"Error: No test files were selected using current configuration.

Root path:       <<cwd>>/tests/__fixtures__/.generated/validation-commandLine
Test file match: **/*.tst.*, **/__typetests__/*.test.*, **/typetests/*.test.*

"
`;

exports[`'tstyche' command when no test files are present: stdout 1`] = `""`;

exports[`'tstyche' command when search string does not select test files: stderr 1`] = `
"Error: No test files were selected using current configuration.

Root path:       <<cwd>>/tests/__fixtures__/.generated/validation-commandLine
Test file match: **/*.tst.*, **/__typetests__/*.test.*, **/typetests/*.test.*
Path match:      sample

"
`;

exports[`'tstyche' command when search string does not select test files: stdout 1`] = `""`;
